# ubii-msg-formats

./: .babelrc  .gitignore  .npmignore  .prettierrc  .readthedocs.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  ava.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  webpack.config.js
.run/: build ubii-msg-formats.run.xml
benchmarks/: flat-vs-proto-randomized.js
scripts/: compile-constants.js  compile.py  flatbuffers-compile.py  full-compile.js  generate-protobuf-static.js  proto-compile.py  protobufjs-compile-configurable.js
src/: constants.js  constants.json  extraction.js  index.js  topicDataBlockMessage.js  topicDataBlockMessage.json
src/carrier/: creation.js  extraction.js  index.js  validation.js
src/carrierMessage/: carrierMessage.json  carrierMessage.proto  carrierMessageTranslator.js
src/docs/: requirements.txt
src/docs/source/: conf.py  getting-started.rst  index.rst  links
src/flatbuffers/clients/: client.fbs
src/flatbuffers/devices/: component.fbs  device.fbs  topicDemux.fbs  topicMux.fbs
src/flatbuffers/general/: error.fbs  success.fbs
src/flatbuffers/interactions/: interaction.fbs  ioFormat.fbs
src/flatbuffers/servers/: server.fbs
src/flatbuffers/services/: service.fbs  serviceData.fbs  serviceReply.fbs  serviceRequest.fbs
src/flatbuffers/sessions/: interactionInputMapping.fbs  interactionOutputMapping.fbs  ioMapping.fbs  session.fbs
src/flatbuffers/topicData/: topicData.fbs  topicDataRecord.fbs
src/ioMessage/: ioMessage.js  ioMessage.json
src/js/: constants.js  flatbufferUtils.js  index.js  protobuf.js  protobufTranslator.js  protobufUtils.js  utility.js
src/js/messageTranslator/: carrierMessageTranslator.js  causeTranslator.js  effectTranslator.js  errorMessageTranslator.js  interactionTranslator.js  messageTranslator.js  protobufTranslators.js  registrationMessageTranslator.js  serviceReplyTranslator.js  serviceRequestTranslator.js  sessionTranslator.js  subscribtionMessageTranslator.js  topicDataMessageTranslator.js  topicDataTranslator.js  translatorsManager.js  ubiiMessageTranslator.js
src/legacy/: constants.js  extraction.js
src/message/: message.js
src/messageTranslator/: messageTranslator.js
src/proto/: carrierMessage.proto  errorMessage.proto  registrationMessage.proto  serviceMessage.proto  serviceRequest.proto  subscribtionMessage.proto  topicDataMessage.proto  ubiiMessage.proto
src/py/: __init__.py  constants.py  packages.py  proto.py
src/python/: setup.py
src/registrationMessage/: registrationMessage.proto  registrationMessageTranslator.js
src/topicDataBlockMessage/: topicDataBlockMessage.js  topicDataBlockMessage.json  topicDataBlockMessage.proto
src/topicDataMessage/: topicDataMessage.json  topicDataMessage.proto  topicDataMessageTranslator.js
src/ubiiMessage/: ubiiMessage.js
test/: legacyTests.js  test.js
test/data/: client.json  component.json  constants.json  datastructure_bool.json  datastructure_color.json  datastructure_double.json  datastructure_float.json  datastructure_image.json  datastructure_int32.json  datastructure_key_event.json  datastructure_matrix_3x2.json  datastructure_matrix_4x4.json  datastructure_mouse_event.json  datastructure_object2d.json  datastructure_quaternion.json  datastructure_string.json  datastructure_touch_event.json  datastructure_vector2.json  datastructure_vector3.json  datastructure_vector8.json  device.json  error.json  pm.json  pm_module_io.json  server.json  service.json  service_request.json  service_reuest_topic_subscription.json  session.json  session_io_mapping.json  session_list.json  success.json  topic_data_record.json  topic_data_timestamp.json  topic_demux.json  topic_mux.json
test/flat-vs-proto/: flat-vs-proto-randomized.js  flat-vs-proto.js
test/js/: clientRegistrationTest.js  clientSpecificationTest.js  deviceRegistrationTest.js  deviceSpecificationTest.js  errorMessageTest.js  errorTest.js  protobufTranslator.js  protobufUtils.js  publishTopicDataMessageTest.js  registrationMessageTest.js  serviceMessageTest.js  serviceReplyTest.js  serviceRequestTest.js  subscribtionMessageTest.js  subscribtionTest.js  successTest.js  test.js  topicDataMessageTest.js  topicDataSubmessageTest.js  topicDataTest.js  ubiiMessageTest.js
test/pytest/: conftest.py  pytest.ini  test_proto.py
test/python/: conftest.py  pytest.ini  test_proto.py
(+848 files in other folders)
