[metadata]
name = ubii-message-formats
url = https://github.com/saggitar/ubii-msg-formats.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = "Python Code for Ubi Interact protobuf messages"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = ubii, ubi-interact, protobuf, proto-plus
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
setup_requires =
    codestare-msg-compiler >= 0.0.4a1dev5
    importlib_metadata;python_version<"3.8"

install_requires =
    proto-plus >= 1.19.0
    generic-proto-plus-stubs
    more-itertools

package_dir =
    = src/py

packages = find_namespace:

[options.packages.find]
where = src/py

[build_py_proto]
include_proto = src/proto

[compile_protoplus]
plugin_params = generate_inits,relative_imports,package=ubii.proto.v1

[compile_proto]
build_lib = src/py
proto_package = ubii.proto.v1
flavor = plus

[build]
build_lib = dist/py

[options.extras_require]
compiler = codestare-msg-compiler[protoplus] >= 0.0.4a1dev14
test = pytest
docs =
    importlib_metadata;python_version<"3.8"
    sphinx==4.2.0
