[metadata]
name = ubii-message-formats
url = https://github.com/saggitar/ubii-msg-formats.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = "Python Code for Ubi Interact protobuf messages"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = ubii, ubi-interact, protobuf, proto-plus
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
setup_requires =
    codestare-msg-compiler[protoplus] >= 0.0.6.dev2
    importlib_metadata;python_version<"3.8"

install_requires =
    proto-plus >= 1.20.6
    protobuf == 3.20.1
    generic-proto-plus-stubs>=0.3
    more-itertools

package_dir =
    = src/py

packages = find_namespace:
include_package_data = True

[build_py_proto]
include_proto = src/proto
clean = True

[compile_protoplus]
plugin_params = generate_inits,generic_field_hints,relative_imports,readable_imports,package=ubii.proto.v1

[options.packages.find]
where = src/py

# ---------- use this block for release package
[compile_proto]
build_lib = src/py
proto_package = ubii.proto.v1
flavor = plus

# ---------- use this block to build test baseline package
# [compile_proto]
# build_lib = test/python
# proto_package = ubii.proto_baseline
# flavor = python
#
# [generate_inits]
# packages =
#     ubii.proto_baseline
# import_style = wildcard
# recursive = True

[build]
build_lib = dist/py

[options.extras_require]
compiler = codestare-msg-compiler[protoplus] >= 0.0.6.dev2
test = pytest
docs =
    importlib_metadata;python_version<"3.8"
    sphinx==4.2.0
